updated css and html

--- a/test.html
+++ b/test.html
@@ -112,6 +112,14 @@
       </div>
     </section>
 
+    <section>
+      <div class="raffle">
+        <p class="subheading">Raffle reward: <br><span class="heading">$250 USDT for 1 participan</span></p>
+      </div>
+      <div class="btn-div">
+        <a href="gradient-btn" class="gradient-btn">Terms and Conditions</a>
+      </div>
+    </section>
 
     <footer>
       <div class="footer-logo left-logo">
