--- a/test.html
+++ b/test.html
@@ -123,10 +123,14 @@
 
     <footer>
       <div class="footer-logo left-logo">
+        <a href="https://www.exodus.com/" target="_blank" rel="noopener noreferrer">
           <img src="img/Exodus_logo_white 1.svg" alt="Left Logo">
+        </a>
       </div>
       <div class="footer-logo right-logo">
+        <a href="https://twitter.com/exodus_io" target="_blank" rel="noopener noreferrer">
           <img src="img/twitter-logo.svg" alt="Right Logo">
+        </a>
       </div>
   </footer>
 
