--- a/test.html
+++ b/test.html
@@ -68,16 +68,14 @@
           </div>
         </div>
         <div class="h2p-item">
-          <form action="">
-            <label for="" class="label">Wallet address*</label><br>
-            <input type="text" class="input"><br>
-            <label for="" class="label">Email*</label><br>
-            <input type="text" class="input"><br>
-            <label for="" class="label">Twitter handle*</label><br>
-            <input type="text" class="input"><br>
-            <label for="" class="label">Link to retweet*</label><br>
-            <input type="text" class="input"><br>
-          </form>
+          <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
+          <script>
+            hbspt.forms.create({
+              region: "na1",
+              portalId: "2784460",
+              formId: "5e066d11-405e-4c7f-a2f6-262dce3e6c5a"
+            });
+          </script>
 
         </div>
       </div>
