--- a/index.html
+++ b/index.html
@@ -2,98 +2,135 @@
 <html>
   <head>
     <link rel="stylesheet" href="globals.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/test.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div class="swap-to-win-landing">
-      <div class="overlap-group-wrapper">
-        <div class="overlap-group">
-          <div class="rectangle"></div>
-          <div class="div"></div>
-          <div class="rectangle-2"></div>
-          <img class="adobestock" src="img/hero.jpg" />
-          <div class="rectangle-3"></div>
-          <div class="text-wrapper">Swap to Win</div>
-          <img class="exodus-symbol" src="img/exodus-logo.svg" />
-          <p class="p">30th August 2023 - 11th September 2023</p>
-          <div class="text-wrapper-2">How to win</div>
-          <div class="text-wrapper-3">How to participate</div>
-          <div class="text-wrapper-4">Rewards</div>
-          <p class="make-as-many-swaps">Make as many <br />swaps as you <br />can on <br />Exodus SWAP</p>
-          <div class="text-wrapper-5">01</div>
-          <div class="text-wrapper-6">Wallet address*</div>
-          <div class="text-wrapper-7">email*</div>
-          <div class="untitled"><img class="clip-path-group" src="img/rectangle.svg" /></div>
-          <div class="clip-path-group-wrapper"><img class="clip-path-group" src="img/rectangle.svg" /></div>
-          <div class="img-wrapper"><img class="clip-path-group" src="img/rectangle.svg" /></div>
-          <div class="text-wrapper-8">Twitter Handle</div>
-          <div class="text-wrapper-9">02</div>
-          <div class="text-wrapper-10">03</div>
-          <div class="text-wrapper-11">04</div>
-          <p class="the-top-users">The top 50 users <br />with the most <br />swaps will win <br />a reward</p>
-          <p class="all-participants">
-            All participants will <br />enter a Raffle <br />automatically to <br />win $250
-          </p>
-          <img class="vector" src="img/vector-1.svg" />
-          <img class="img" src="img/vector-2.svg" />
-          <p class="visit-https-www">
-            <span class="span">Visit </span>
-            <a href="https://www.exodus.com/" target="_blank" rel="noopener noreferrer"
-              ><span class="text-wrapper-12">https://www.exodus.com/</span></a
-            >
-            <span class="span">
-              and create a wallet<br /><br />Go to Exodus Swap and make a minimum of 1 swap with any pair<br /><br />Visit
-            </span>
-            <a href="https://twitter.com/exodus_io" target="_blank" rel="noopener noreferrer"
-              ><span class="text-wrapper-12">https://twitter.com/exodus_io</span></a
-            >
-            <span class="span">
-              and retweet the campaign tweet<br /><br />Submit the following information with the form below</span
-            >
-          </p>
-          <img class="frame" src="img/arrow.svg" />
-          <img class="frame-2" src="img/arrow.svg" />
-          <img class="frame-3" src="img/arrow.svg" />
-          <div class="rectangle-4"></div>
-          <div class="rectangle-5"></div>
-          <p class="element-exodus-swaper">
-            <span class="text-wrapper-13"><br /></span>
-            <span class="text-wrapper-14">1st Exodus SWAPer: <br /></span>
-            <span class="text-wrapper-15">$1,000 USDT</span>
-          </p>
-          <div class="rectangle-6"></div>
-          <div class="rectangle-7"></div>
-          <div class="rectangle-8"></div>
-          <p class="element-nd-exodus-swaper">
-            <span class="text-wrapper-16"><br /></span>
-            <span class="text-wrapper-17">2nd Exodus SWAPer: <br /></span>
-            <span class="text-wrapper-18">$500 USDT</span>
-          </p>
-          <p class="element-exodus">
-            <span class="text-wrapper-16"><br /></span>
-            <span class="text-wrapper-17">4th - 10th Exodus SWAPer: <br /></span>
-            <span class="text-wrapper-18">$50 USDT for each SWAPer</span>
-          </p>
-          <p class="element-th-th-exodus">
-            <span class="text-wrapper-19">11th - 50th Exodus SWAPer: <br /></span>
-            <span class="text-wrapper-20">$20 USDT for each SWAPer</span>
-          </p>
-          <p class="element-rd-exodus-swaper">
-            <span class="text-wrapper-16"><br /></span>
-            <span class="text-wrapper-17">3rd Exodus SWAPer: <br /></span>
-            <span class="text-wrapper-18">$250 USDT</span>
-          </p>
-          <p class="raffle-reward">
-            <span class="text-wrapper-21">Raffle reward: <br /></span>
-            <span class="text-wrapper-22">$250 USDT for 1 participant</span>
-          </p>
-          <div class="text-wrapper-23">Link to retweet</div>
-          <button class="button"><div class="text-wrapper-24">TERMS AND CONDITIONS</div></button>
-          <div class="rectangle-9"></div>
-          <img class="exodus-logo-white" src="img/Exodus_logo_white 1.svg" />
-          <img class="mask-group" src="img/twitter-logo.svg" />
-        </div>
+
+    <div class="hero-image">
+      <div class="hero-text">
+        <img class="exodus-symbol" src="img/exodus-logo.svg" />
+        <h1>Swap to Win</h1>
+        <p>30th August 2023 - 11th September 2023</p>
       </div>
     </div>
+
+
+    <section class="h2w-section">
+      <div class="rectangle-2"></div>
+      <div class="rectangle"></div>
+      <h2>How to Win</h2>
+      <div class="h2w ">
+        <div class="h2w-item">
+          <img src="img/arrow.svg" alt="">
+          <h3>Make as many 
+            swaps as you 
+            can on 
+            Exodus SWAP</h3>
+        </div>
+        <div class="h2w-item">
+          <img src="img/arrow.svg" alt="">
+          <h3>The top 50 users 
+            with the most 
+            swaps will win 
+            a reward</h3>
+        </div>
+        <div class="h2w-item">
+          <img src="img/arrow.svg" alt="">
+          <h3>All participants will 
+            enter a Raffle 
+            automatically to 
+            win $250</h3>
+        </div>
+      </div>
+      <h2>How to participate</h2>
+      <div class="h2p">
+        <div class="h2p-item">
+          <div>
+            <div class="h2p-content">
+              <div class="list">01</div>
+              <p>Visit <a href="https://www.exodus.com/" target="_blank" rel="noopener noreferrer">https://www.exodus.com/</a> and create a wallet.</p>
+            </div>
+            <div class="h2p-content">
+              <div class="list">02</div>
+              <p>Go to Exodus Swap and make a minimum of 1 swap with any pair. </p>
+            </div>
+            <div class="h2p-content">
+              <div class="list">03</div>
+              <p>Visit <a href="https://twitter.com/exodus_io" target="_blank" rel="noopener noreferrer">https://twitter.com/exodus_io</a> and retweet the campaign tweet.</p>
+            </div>
+            <div class="h2p-content">
+              <div class="list">04</div>
+              <p>Submit the following information with the form below </p>
+            </div>
+          </div>
+        </div>
+        <div class="h2p-item">
+          <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
+          <script>
+            hbspt.forms.create({
+              region: "na1",
+              portalId: "2784460",
+              formId: "5e066d11-405e-4c7f-a2f6-262dce3e6c5a"
+            });
+          </script>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="d-flex justify-content-center">
+      <div class="container text-center">
+        <h2>Rewards</h2>
+        <div class="three-equal"> 
+          <div class="col-3e">
+              <img src="img/rectangle.svg" alt="">
+            <p> 1st Exodus SWAPer: <br><span>$1,000 USDT</span></p>
+          </div>
+          <div class="col-3e">
+              <img src="img/rectangle.svg" alt="">
+            <p>2nd Exodus SWAPer: <br><span>$500 USDT</span></p>
+          </div>
+          <div class="col-3e">
+              <img src="img/rectangle.svg" alt="">
+            <p>
+              3rd Exodus SWAPer: <br><span>$250 USDT</span></p>
+          </div>
+        </div>
+        <div class="two-equal">
+          <div class="col-2e">
+            <p>4th - 10th Exodus SWAPer: <br><span>$50 USDT for each SWAPer</span></p>
+          </div>
+          <div class="col-2e">
+            <p>11th - 50th Exodus SWAPer: <br><span>$20 USDT for each SWAPer</span></p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="raffle">
+        <p class="subheading">Raffle reward: <br><span class="heading">$250 USDT for 1 participan</span></p>
+      </div>
+      <div class="btn-div">
+        <a href="gradient-btn" class="gradient-btn">Terms and Conditions</a>
+      </div>
+    </section>
+
+    <footer>
+      <div class="footer-logo left-logo">
+        <a href="https://www.exodus.com/" target="_blank" rel="noopener noreferrer">
+          <img src="img/Exodus_logo_white 1.svg" alt="Left Logo">
+        </a>
+      </div>
+      <div class="footer-logo right-logo">
+        <a href="https://twitter.com/exodus_io" target="_blank" rel="noopener noreferrer">
+          <img src="img/twitter-logo.svg" alt="Right Logo">
+        </a>
+      </div>
+  </footer>
+
   </body>
 </html>
