made updates to text

--- a/router-2.html
+++ b/router-2.html
@@ -17,7 +17,7 @@
         <div class="hero-text-center">
             <img src="" alt="">
             <h1>Bridge to earn</h1>
-            <p>18th SEPT TO - 29th SEPT</p>
+            <p>18th SEPT TO 29th SEPT</p>
         </div>
     </div>
 </section>
@@ -117,7 +117,7 @@
                     each winner</h3>
             </div>
             <div class="reward">
-                <h3 class="fs-20"><span class="magenta">31st - 150th Bridgers: </span> $10 USDT for each winner</h3>
+                <h3 class="fs-20"><span class="magenta">31st - 149th Bridgers: </span> $10 USDT for each winner</h3>
             </div>
         </div>
         <div class="text-center">
