--- a/router-2.html
+++ b/router-2.html
@@ -133,9 +133,9 @@
     <div class="d-flex justify-content-center mb-5 pb-5">
         <a href="#" class="secondary-btn">TERMS & CONDITIONS</a>
     </div>
-    <div class="d-flex space-around pb-5 mb-100">
-        <a href="#" class="primary-btn">VOYAGER</a>
-        <a href="#" class="primary-btn">TWITTER</a>
+    <div class="d-flex space-around pb-5 mb-100 flex-wrap">
+        <a href="#" class="primary-btn mb-4">VOYAGER</a>
+        <a href="#" class="primary-btn mb-4">TWITTER</a>
     </div>
 </section>
     
